# backend-training-hedro

./: README.md  docker-compose.yaml
aws-grpc/: Cargo.toml
aws-grpc/proto/: server.proto
aws-grpc/src/: main.rs
aws-grpc/src/infra/: aws_messenger.rs  mod.rs
device-sim/: .env  .eslintrc.json  dockerfile  package-lock.json  package.json  tsconfig.json
device-sim/src/: main.ts
device-sim/src/infra/: humidity_random_generator.ts  logger.ts  messaging.ts  temp_random_generator.ts
device-sim/src/services/: humidity.ts  intefaces.ts  temp.ts
mqtt-rmq/: .env  Cargo.toml  dockerfile
mqtt-rmq/src/: main.rs
mqtt-rmq/src/infra/: mqtt_messaging.rs  rmq_messaging.rs
mqtt-rmq/src/services/: service.rs
notas-de-aula/: aula01.md  aula02.md  aula03.md  aula04.md  aula05.md  aula06.md  aula07.md  aula08.md
rmq-aws/: .env  Cargo.toml  dockerfile
rmq-aws/src/: main.rs
rmq-aws/src/infra/: aws_messenger.rs  mod.rs  rmq_messenger.rs
rmq-aws/src/services/: messages.rs  service.rs
