[package]
name = "aws-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# add server and client bins


[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.2" }
log = { version = "0.4.20" }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-timestreamquery = {version = "1.14.0"}


[build-dependencies]
tonic-build = "0.11.0"
